--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -1,39 +1,42 @@
-﻿@model List<LunchApp.Models.User>
+﻿@model IEnumerable<LunchApp.Models.User>
 
-<h2>Admin pregled uporabnikov</h2>
+<h2>Pregled uporabnikov in prijav/odjav kosil</h2>
 
-<table border="1" cellpadding="5" cellspacing="0">
+<table class="table table-striped">
     <thead>
         <tr>
             <th>Ime</th>
             <th>Priimek</th>
             <th>Uporabniško ime</th>
-            <th>Prijave/Odjave</th>
+            <th>Datum</th>
+            <th>Status</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var user in Model)
         {
-            <tr>
-                <td>@user.FirstName</td>
-                <td>@user.LastName</td>
-                <td>@user.Username</td>
-                <td>
-                    @if (user.MealSignups != null && user.MealSignups.Any())
-                    {
-                        <ul>
-                            @foreach (var m in user.MealSignups.OrderBy(ms => ms.Date))
-                            {
-                                <li>@m.Date.ToString("dd.MM.yyyy") - @(m.SignedUp ? "PRIJAVLJEN" : "ODJAVLJEN")</li>
-                            }
-                        </ul>
-                    }
-                    else
-                    {
-                        <em>Brez prijav/odjav</em>
-                    }
-                </td>
-            </tr>
+            if (user.MealSignups != null && user.MealSignups.Any())
+            {
+                foreach (var signup in user.MealSignups.OrderBy(s => s.Date))
+                {
+                    <tr>
+                        <td>@user.FirstName</td>
+                        <td>@user.LastName</td>
+                        <td>@user.Username</td>
+                        <td>@signup.Date.ToString("dd.MM.yyyy")</td>
+                        <td>@(signup.SignedUp ? "PRIJAVLJEN" : "ODJAVLJEN")</td>
+                    </tr>
+                }
+            }
+            else
+            {
+                <tr>
+                    <td>@user.FirstName</td>
+                    <td>@user.LastName</td>
+                    <td>@user.Username</td>
+                    <td colspan="2">Brez prijav/odjav</td>
+                </tr>
+            }
         }
     </tbody>
 </table>
